# diabetes-kedro

./: .gitignore  Dockerfile  README.md  pyproject.toml
api/: main.py
conf/base/: catalog.yml  parameters.yml
src/: pyproject.toml
src/diabetes_prediction/: pipeline_registry.py  settings.py
src/diabetes_prediction/pipelines/: __init__.py
src/diabetes_prediction/pipelines/data_engineering/: nodes.py  pipeline.py
src/diabetes_prediction/pipelines/inference/: nodes.py  pipeline.py
src/diabetes_prediction/pipelines/training/: nodes.py  pipeline.py
